methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return (true)
            ^MethodsReturning:5: warning: enclosing method colonne has result type Unit: return value discarded
    return (true)
    ^MethodsReturning:13: error: type mismatch;
 found   : Unit
 required: Boolean
  if (colonne()){
             ^MethodsReturning:23: error: type mismatch;
 found   : Unit
 required: Boolean
    colonne()
           ^